contrib/codegen/tests/ui-fail/database-types.stderr
error[E0277]: the trait bound `Unknown: rocket_contrib::databases::Poolable` is not satisfied
 --> $DIR/database-types.rs:7:10
  |
7 | struct A(Unknown);
  |          ^^^^^^^ the trait `rocket_contrib::databases::Poolable` is not implemented for `Unknown`

error[E0277]: the trait bound `std::vec::Vec<i32>: rocket_contrib::databases::Poolable` is not satisfied
  --> $DIR/database-types.rs:11:10
   |
11 | struct B(Vec<i32>);
   |          ^^^^^^^^ the trait `rocket_contrib::databases::Poolable` is not implemented for `std::vec::Vec<i32>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
